# WebServer

./: .gitignore  CMakeLists.txt  MIMEtypes.cpp  Makefile  README.md  Response  Response.cpp  Response.hpp  Server.cpp  Server.hpp  a.out  client.cpp  errors.cpp  lexer.cpp  main.cpp  myFile  post.cpp  protorype.cpp  regExpressions.cpp  serv.conf  server.cpp  start.html  startServer.cpp  utils.cpp  utils.hpp  webserv  webserv.conf
CGI/: 1.php  CGI.cpp  CGI.hpp  RequestConfigMatch.cpp  RequestConfigMatch.hpp  Response  a.out  aaa  mainCGI.cpp
Client/: Client.cpp  Client.hpp
ConfigParser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.cpp.orig  ConfigParser.hpp  a.out  webserv.conf
ConfigParser/a.out.dSYM/Contents/Resources/DWARF/: a.out
Request/: Request.cpp  Request.hpp  parser.cpp
a.out.dSYM/Contents/Resources/DWARF/: a.out
conf/: .htpasswd
html/: index.html  index.php  style.css
html/YoupiBanane/: 1.php
html/put_test/: index.html
includes/: CGI.hpp  Client.hpp  ConfigParser.hpp  RequestConfigMatch.hpp  Response.hpp  Server.hpp  utils.hpp
pages/: 400.html  404.html  500.html  index.html  script.js
parser/: Request.cpp  Request.hpp  a.out  parser.cpp
srcs/: CGI.cpp  ConfigParser.cpp  Request.cpp  RequestConfigMatch.cpp  Response.cpp  Server.cpp  errors.cpp  signals.cpp  startServer.cpp  utils.cpp
srcs/CGI/: CGI.hpp  RequestConfigMatch.cpp  RequestConfigMatch.hpp
srcs/Client/: Client.cpp  Client.hpp
srcs/ConfigParser/: ConfigParser.hpp
srcs/Response/: Response.hpp
srcs/Server/: Server.cpp  Server.hpp
srcs/utils/: MIMEtypes.cpp  errors.cpp  utils.hpp
